Actions
Bug #10651
closedtnf: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/tnf/tnf.c:33: ../../common/tnf/tnf.c: In function 'tnf_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/tnf/tnf.c:247:18: note: in expansion of macro 'NULL' DDI_PSEUDO, NULL) == DDI_FAILURE) || ^~~~ In file included from ../../common/tnf/tnf.c:46:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ In file included from ../../common/sys/param.h:48:0, from ../../common/tnf/tnf.c:33: ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/tnf/tnf.c:249:18: note: in expansion of macro 'NULL' DDI_PSEUDO, NULL) == DDI_FAILURE)) { ^~~~ In file included from ../../common/tnf/tnf.c:46:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e2c63ca6b3eb22629464788e745718be5cd878f0
commit e2c63ca6b3eb22629464788e745718be5cd878f0 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-05T05:56:08.000Z 10651 tnf: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions