usr/src/uts/common/tnf/tnf.c
@@ -110,7 +110,7 @@ static struct {
 	boolean_t	tnf_pidfilter_mode;
 	boolean_t	ctldev_is_open;
 	int		mapdev_open_count;
-	kmutex_t 	tnf_mtx;
+	kmutex_t	tnf_mtx;
 } tnf_drv_state = { 0, B_FALSE, B_FALSE, 0 };
 
 static int tnf_getmaxprobe(caddr_t, int);
@@ -244,9 +244,9 @@ tnf_attach(dev_info_t *devi, ddi_attach_cmd_t cmd)
 	if (cmd != DDI_ATTACH)
 		return (DDI_FAILURE);
 	if ((ddi_create_minor_node(devi, "tnfctl", S_IFCHR, TNFCTL_MINOR,
-	    DDI_PSEUDO, NULL) == DDI_FAILURE) ||
+	    DDI_PSEUDO, 0) == DDI_FAILURE) ||
 	    (ddi_create_minor_node(devi, "tnfmap", S_IFCHR, TNFMAP_MINOR,
-	    DDI_PSEUDO, NULL) == DDI_FAILURE)) {
+	    DDI_PSEUDO, 0) == DDI_FAILURE)) {
 		ddi_remove_minor_node(devi, NULL);
 		return (DDI_FAILURE);
 	}
@@ -379,7 +379,7 @@ tnf_mmap(dev_t dev, off_t off, int prot)
 /*ARGSUSED4*/
 static int
 tnf_ioctl(dev_t dev, int cmd, intptr_t arg, int mode,
-	cred_t *credp, int *rvalp)
+    cred_t *credp, int *rvalp)
 {
 	int filterval = 1;
 
